@@ -1,6 +1,7 @@
 package org.lt.project.security.config;
 
 import org.lt.project.security.filter.TokenAuthenticationFilter;
+import org.lt.project.security.filter.RateLimitFilter;
 import org.lt.project.service.UserService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -20,49 +21,93 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import lombok.extern.slf4j.Slf4j;
+
+import org.springframework.beans.factory.annotation.Value;
+import org.lt.project.security.filter.XssFilter;
+import java.util.Arrays;
+
 
 @EnableWebSecurity
 @EnableMethodSecurity
 @Configuration
+@Slf4j
 public class SecurityConfig {
+    @Value("${spring.profiles.active:prod}")
+    private String activeProfile;
+
+    @Value("${allowed.origins}")
+    private String allowedOrigins;
+
     private final TokenAuthenticationFilter tokenAuthenticationFilter;
+    private final RateLimitFilter rateLimitFilter;
     private final UserService userService;
     private final PasswordEncoder passwordEncoder;
+    private final XssFilter xssFilter;
 
-    public SecurityConfig(TokenAuthenticationFilter tokenAuthenticationFilter, UserService userService, PasswordEncoder passwordEncoder) {
+    public SecurityConfig(TokenAuthenticationFilter tokenAuthenticationFilter,
+            RateLimitFilter rateLimitFilter,
+            UserService userService,
+            XssFilter xssFilter,
+            PasswordEncoder passwordEncoder) {
         this.tokenAuthenticationFilter = tokenAuthenticationFilter;
+        this.rateLimitFilter = rateLimitFilter;
         this.userService = userService;
         this.passwordEncoder = passwordEncoder;
+        this.xssFilter = xssFilter;
     }
 
-    //todo user create kısmını gözden geçir
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        return http
+        HttpSecurity security = http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(x ->
-                        x.requestMatchers("/lt-api/1.0/authentication/create").permitAll()
-                                .requestMatchers("/lt-api/1.0/authentication/login").permitAll()
-                )
-                .authorizeHttpRequests(x ->
-                        x.requestMatchers("/swagger-ui/**").permitAll()
-                        .requestMatchers("/v3/api-docs/**").permitAll())
-                .authorizeHttpRequests(x ->
-                        x.requestMatchers("/lt-api/1.0/server/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/abuse-key/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/abuse/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/log-listener/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/log-pattern/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/suspect-ip/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/banned-ip/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/settings/**").hasRole("USER")
-                                .requestMatchers("/lt-api/1.0/file/**").hasRole("USER")
-                )
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()));
+
+        // Swagger erişimi için profile kontrolü
+        if ("dev".equals(activeProfile)) {
+            security.authorizeHttpRequests(x -> x
+                    .requestMatchers("/authentication/register").permitAll()
+                    .requestMatchers("/authentication/login").permitAll()
+                    .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                    .requestMatchers("/server/**").hasRole("USER")
+                    .requestMatchers("/abuse-key/**").hasRole("USER")
+                    .requestMatchers("/abuse/**").hasRole("USER")
+                    .requestMatchers("/log-listener/**").hasRole("USER")
+                    .requestMatchers("/log-pattern/**").hasRole("USER")
+                    .requestMatchers("/suspect-ip/**").hasRole("USER")
+                    .requestMatchers("/banned-ip/**").hasRole("USER")
+                    .requestMatchers("/settings/**").hasRole("USER")
+                    .requestMatchers("/file/**").hasRole("USER")
+                    .anyRequest().authenticated());
+        } else {
+            security.authorizeHttpRequests(x -> x
+                    .requestMatchers("/authentication/create").permitAll()
+                    .requestMatchers("/authentication/login").permitAll()
+                    .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").denyAll() // Swagger'a erişimi engelle
+                    .requestMatchers("/server/**").hasRole("USER")
+                    .requestMatchers("/abuse-key/**").hasRole("USER")
+                    .requestMatchers("/abuse/**").hasRole("USER")
+                    .requestMatchers("/log-listener/**").hasRole("USER")
+                    .requestMatchers("/log-pattern/**").hasRole("USER")
+                    .requestMatchers("/suspect-ip/**").hasRole("USER")
+                    .requestMatchers("/banned-ip/**").hasRole("USER")
+                    .requestMatchers("/settings/**").hasRole("USER")
+                    .requestMatchers("/file/**").hasRole("USER")
+                    .anyRequest().authenticated());
+        }
+
+        return security
                 .sessionManagement(x -> x.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider())
-                .addFilterBefore(tokenAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .headers(headers -> headers
+                    .xssProtection(xss -> xss.disable())
+                    .contentSecurityPolicy(csp -> csp.policyDirectives("default-src 'self'"))
+                    .frameOptions(frame -> frame.deny())
+                    .contentTypeOptions(content -> content.disable())
+                )
+                .addFilterBefore(xssFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(rateLimitFilter, XssFilter.class)
+                .addFilterBefore(tokenAuthenticationFilter, RateLimitFilter.class)
                 .build();
     }
 
@@ -81,11 +126,36 @@ public class SecurityConfig {
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(List.of("*"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Origins
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        
+        // HTTP Methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        
+        // Headers
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "Origin",
+            "X-Requested-With",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"
+        ));
+        
+        // Exposed Headers
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "Access-Control-Allow-Origin",
+            "Access-Control-Allow-Credentials"
+        ));
+        
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L); 
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
